# SLM-WM

./: .gitattributes  .gitignore  AGENTS.md  README.md  pyproject.toml
.codex/: project_contract.md
configs/: README.md  attack_conditioned_quality_estimand.json  colab_sd35_runtime_constraints.txt  content_routing_reference_registry.json  content_survival_direction_protocol.json  content_survival_direction_protocol_schema.json  content_survival_observation.json  content_survival_observation_schema.json  core_method_dependency_identity.json  dependency_profile_registry.json  field_lifecycle_registry.json  independent_semantic_quality_evaluator.json  keyed_prg_cross_platform_known_answer.json  method_semantic_registry.json  model_sd3.yaml  model_sd35.yaml  model_source_registry.json  paper_claim_registry.json  paper_main_full_paper_prompts.txt  paper_main_full_prompts.txt  paper_main_pilot_paper_prompts.txt  paper_main_probe_paper_prompts.txt  paper_main_probe_prompts.txt  paper_profile_protocol_registry.json  paper_quality_claim_protocol.json  prompt_source_registry.json
docs/: README.md  artifact_rebuild.md  core_method_package_readme.md  extraction_profiles.md  field_registry.md  file_organization.md  harness_engineering.md  naming_governance.md  paper_project_governance.md  paper_quality_evidence_governance.md  phase_status.md  release_boundary.md  release_layer_boundary.md  test_case_constraints.md
experiments/: README.md
external_baseline/: .gitignore  README.md  source_registry.json
main/: README.md  __init__.py
paper_experiments/: README.md  __init__.py
(+700 files in other folders)
